--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@types/aws-lambda": "^8.10.114",
     "@types/node": "^18.15.11",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1352.0",
+    "aws-sdk": "^2.1409.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.363.0",
     "winston": "^3.8.2"
   }
 }
