--- a/kc-authentication-app/tsconfig.json
+++ b/kc-authentication-app/tsconfig.json
@@ -8,6 +8,9 @@
         "sourceMap": true,
         "outDir": "dist"
     },
-    "include": ["src/**/*", "test/test.js"],
-    "exclude": ["src/spikes/**/*"]
+    "include": [
+      "src/**/*", "test/test.js"],
+    "exclude": [
+      "src/spikes/**/*"
+    ]
 }
