--- a/kc-authentication-app/package.json
+++ b/kc-authentication-app/package.json
@@ -12,6 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.114",
+    "@types/axios": "^0.14.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/jwk-to-pem": "^2.0.1",
     "@types/node": "^18.15.11",
     "aws-lambda": "^1.0.7",
     "aws-sdk": "^2.1409.0",
@@ -20,6 +23,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.363.0",
+    "aws-jwt-verify": "^4.0.0",
+    "axios": "^1.4.0",
+    "crypto": "^1.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "jwk-to-pem": "^2.0.5",
     "winston": "^3.8.2"
   }
 }
