--- a/kc-authentication-app/auth-template.yaml
+++ b/kc-authentication-app/auth-template.yaml
@@ -79,6 +79,7 @@ Resources:
                   - "xray:GetSamplingRules"
                   - "xray:GetSamplingTargets"
                   - "xray:GetSamplingStatisticSummaries"
+                  - "cognito-idp:AdminSetUserPassword"
                 Resource: "*"
 
 
