--- a/specs/AuthApi.yaml
+++ b/specs/AuthApi.yaml
@@ -197,8 +197,8 @@ paths:
             responseTemplates:
               application/json: |-
                  #set($res = $input.path('$'))
-                 #set($cause = $input.path('$.cause'))
-                  $cause.errorMessage
+                 #set($cause = $input.path('$.detail'))
+                 $input.json('$.')
 
 
   /auth/change-password:
