KEC - Change password v2

--- a/kc-authentication-app/auth-functions-template.yaml
+++ b/kc-authentication-app/auth-functions-template.yaml
@@ -203,7 +203,7 @@ Resources:
     Type: AWS::Serverless::Function
     Properties:
       FunctionName: !Sub ${EnvironmentId}-ChangePasswordV2Lambda
-      Handler: index.handlerChangePassword
+      Handler: index.handlerChangePasswordV2
       Runtime: nodejs18.x
       CodeUri: ./dist
       MemorySize: 512
