--- a/kc-authentication-app/auth-functions-template.yaml
+++ b/kc-authentication-app/auth-functions-template.yaml
@@ -245,6 +245,52 @@ Resources:
       Principal: "apigateway.amazonaws.com"
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${AuthApiGateway}*/*/*"
 
+  SignUpLambda:
+    Type: AWS::Serverless::Function
+    Properties:
+      FunctionName: !Sub ${EnvironmentId}-SignUpLambda
+      Handler: index.handlerSignUp
+      Runtime: nodejs18.x
+      CodeUri: ./dist
+      MemorySize: 512
+      Timeout: 20
+      Role: !Ref AuthRoleArn
+      AutoPublishAlias: !Ref LambdaAliasProduction
+      Layers:
+        - !Ref AuthLayer
+      Environment:
+        Variables:
+          ENVIRONMENT_ID: !Ref EnvironmentId
+          LOG_LEVEL: DEBUG
+          KMS_KEY_ID: !Sub 'arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/*'
+          AUTH_AWS_REGION: !Ref AuthAwsRegion
+          AUTH_CLIENT_ID: !Ref AuthClientId
+          AUTH_SECRET_CLIENT: !Ref AuthSecretClient
+          AUTH_USER_POOL_ID: !Ref AuthUserPoolId
+          AUTH_AWS_ACCOUNT_ID: !Ref AWS::AccountId
+      Tracing: Active
+      Events:
+        EventApi:
+          Type: Api
+          Properties:
+            RestApiId: !Ref AuthApiGateway
+            Path: /auth/sign-up
+            Method: post
+
+  SignUpLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub "/aws/lambda/${SignUpLambda}"
+      RetentionInDays: !Ref LogRetentionInDays
+
+  SignUpLambdaProductionPermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Sub "${ChangePasswordLambda}:${LambdaAliasProduction}"
+      Principal: "apigateway.amazonaws.com"
+      SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${AuthApiGateway}*/*/*"
+
   TestInLambda:
     Type: AWS::Serverless::Function
     Properties:
@@ -288,6 +334,10 @@ Outputs:
   ChangePasswordV2LambdaArn:
     Description: ChangePasswordV2 Lambda ARN
     Value: !GetAtt ChangePasswordV2Lambda.Arn
+
+  SignUpLambdaArn:
+    Description: SignUp Lambda ARN
+    Value: !GetAtt SignUpLambda.Arn
 
   TestInLambdaArn:
     Description: TestIn Lambda ARN
