--- a/kc-authentication-app/auth-functions-template.yaml
+++ b/kc-authentication-app/auth-functions-template.yaml
@@ -274,7 +274,7 @@ Resources:
           Type: Api
           Properties:
             RestApiId: !Ref AuthApiGateway
-            Path: /auth/sign-up
+            Path: /auth/signup
             Method: post
 
   SignUpLogGroup:
